[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "padawan"
version = "0.0.1"
authors = [
  { name="Martin Wiebusch", email="mwiebusch78@gmail.com" },
]
description = "Wrangle partitioned data with polars."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "polars >= 0.15.9"
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
