[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "padawan"
version = "0.13"
authors = [
  { name="Martin Wiebusch" },
]
description = "Wrangle partitioned data with polars."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "polars >= 1.14.0",
    "cloudpickle",
]

[project.urls]
"Homepage" = "https://github.com/mwiebusch78/padawan"
"Bug Tracker" = "https://github.com/mwiebusch78/padawan/issues"
"Documentation" = "https://padawan.readthedocs.io/en/latest/"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
